changes to comprehensions

--- a/Python_Comprehensions.ipynb
+++ b/Python_Comprehensions.ipynb
@@ -3,9 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyMg47jOF/+UHACrxLAHmnTD",
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -16,16 +14,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/RodrigoFA216/Learning-python/blob/main/Python_Comprehensions.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
@@ -59,7 +47,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -309,7 +297,7 @@
         "id": "QhEw3WxQi_u5",
         "outputId": "76d51e95-6946-4a8c-e4cf-92b1c2f2cbc2"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -353,7 +341,7 @@
         "id": "RoaifuFnkwt2",
         "outputId": "d30d6c4d-683b-42ca-b09f-35144695d2d9"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -398,7 +386,7 @@
         "id": "2kKnjnMqlqXe",
         "outputId": "611d3706-9235-43ce-b65c-3f74524698fa"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -470,7 +458,7 @@
         "id": "kAotTQD8njBi",
         "outputId": "dbddd5f1-39dc-4386-d488-755b72affe16"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -519,7 +507,7 @@
         "id": "d2sqEgzqyMeT",
         "outputId": "68573248-8d25-45dc-983e-dfe71f71d59d"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
